# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [Unreleased]

### Added

- **🎉 SISTEMA DE PARTY! 🎉** Usuários podem criar uma party usando o comando `/grupo criar`. Uma party pode ir ao mesmo tempo para a dungeon para enfrentar múltiplos monstros de uma vez num formato novo de batalha em grupos!.
- Sistema de forja de itens
- O comando `/inventario` foi dividido em 3 subcomandos, `/ver`, `/poções` e `/equipamentos`, você pode equipar diferentes armas, mochilas e armaduras em `/equipamentos`, usar suas poções em `/poções` e ver o inventário de jogadores em `/ver`
- Adicionado a quantidade de itens no inventário no `/ficha` e `/inventário ver`

### Changed

- Sistema de melhoria de itens

### Fixed

- Removido acento na palavra `itens`. Meu português não é dos melhoers.
- Resolvido problema no centro comprar itens.

### Removed

- Nível de drop de inimigos

## [4.0.3] - 2022-05-29

### Hotfix

- Os previews de perfil não funcionavam no `/loja comprar tema`
- Removido opção de vender estrelinhas no `/loja vender`

### Changed

- Tempo de resposta dos comandos de ação foram reduzidos
- Ficou mais fácil de abençoar seus pontos em `/ficha` e `/arena configurar`. Na ficha, coloque quantos pontos você quer **adicionar** em cada status. Na arena, coloque o valor que você quer **settar** em cada status. Caso não coloque nada, o valor antigo continuará

## [4.0.2] - 2022-05-24

### Changed

- Os comandos da Menhera voltaram a ser em português. Desculpem a incoveniência
- O texto do mamar voltou como era antes ehe

### Fixed

- Jogos do bicho eram adicionados nas estatísticas da roleta
- Inconsistências no ping do `/menhera estatísticas`
- Problemas com permissões no comando `/configurar`

## [4.0.1] - 2022-05-17

### Added
